# vokey

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.agents/skills/: implement-feature.md  review-pr.md
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/design/: DESIGN.md
docs/plans/: 2026-03-04-expand-providers-and-pipeline.md  2026-03-04-frontend-component-split.md  2026-03-04-openrouter-stt.md  2026-03-04-settings-tab-layout.md  m0-mvp.md  m1-polish.md
docs/standards/: README.md  architecture.md  autopilot.md  coding-standards.md  debugging-standards.md  hard-rules.md  screenshot-standards.md  validation-and-gates.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh-CN.ts  zh-TW.ts
frontend/src/pages/: History.tsx  Home.tsx  Onboarding.tsx  Settings.tsx
frontend/src/types/: app.ts
scripts/: check_legibility.py  check_pr.sh  check_pr_body.py  check_screenshots.py  install-hooks.sh  screenshot-headless.py  screenshot.py  version-bump.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  config.rs  dictionary.rs  history.rs  lib.rs  paste.rs  prompts.rs
src-tauri/src/llm/: gemini.rs  mod.rs  openai.rs
src-tauri/src/stt/: deepgram.rs  groq.rs  mock.rs  mod.rs  openai.rs  openrouter.rs  siliconflow.rs
(+1 files in other folders)
