[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
arboard = "3"
core-graphics = "0.24"
core-graphics-types = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
